--- a/config/item-service-dev.yml
+++ b/config/item-service-dev.yml
@@ -1,7 +1,11 @@
 spring:
   application:
     name: item-service
-    
+  rabbitmq:
+    host: 192.168.80.130
+    port: 5672
+    username: admin
+    password: admin  
 #server:
 #  port: 8001
   
